FitnessApp/fitnessapp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitnessapp
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: fitnessapp
    spec:
      containers:
      - name: fitnessapp
        image: mjwtan/fitnessapp:latest
        ports:
        - containerPort: 8080
  selector:
    matchLabels:
      app: fitnessapp
---
apiVersion: v1
kind: Service
metadata:
  name: fitnessapp-service
spec:
  type: ClusterIP
  selector:
    app: fitnessapp
  ports:
    - name: http
      port: 80
      targetPort: 80
